assets/css/main.scss
/* ... */
.summary:before {
    font-weight: bold;
}

/*-----TOC-----*/

#toc-contents {
    @include media-breakpoint-up(xl) {
        display: block !important;
    }

    // Indent the lists and reset any other padding
    ul {

        // highlighting active links
        a {
            color: inherit;
            padding-left: 0.25rem;
            border-left: 0.125rem solid transparent;
            display: block;
            transition: border-left 0.15s ease-in-out;

            &.active,
            &:hover {
                text-decoration: none !important;
                border-left: 0.125rem solid $primary;
                color: $primary;
            }
        }
    }

    // Consistent vertical space between list items

    li,
    ul ul li {
        margin: 13px 0 0 0;
    }
}

/*-----Default badge-----*/

.default-badge {
    font-weight: inherit;
    background-color: $badge-bg;
    color: $badge-color;
}

.default-badge:hover {
    color: $badge-color-hover;
    background-color: $badge-bg-hover;
}

/*-----General table properties-----*/

.table> :not(:first-child) {
    border-color: inherit;
}

.dataTables_wrapper {
    margin: $btn-focus-width $btn-focus-width 0 0;
}

table {
    @extend .table;
}

// Tool table column width optimizations

.tooltable {
    tr th:nth-child(1) {
        width: 25%;
    }

    tr th:nth-child(2) {
        width: 40%;
    }

    td:nth-child(2) {
        font-size: 0.9em;
    }

    p {
        margin-bottom: 0;
    }
}

.tooltable td:nth-child(1) a,
.trainingtable td:nth-child(1) a {
    font-weight: bold;
}

/* Make a button the same height/feel as a .badge */
.btn-badge {
    /* match .badge metrics */
    --bs-btn-padding-y: .35em;
    --bs-btn-padding-x: .65em;
    --bs-btn-font-size: .75em;
    --bs-btn-line-height: 1;
    --bs-btn-font-weight: 700;
  }

/*-----Footer-----*/

footer {
    font-size: 0.9em;
    line-height: 24px;
    background-color: $footer-bg;
    color: $footer-color;

    a {
        color: $footer-link-color !important;
        font-weight: bold;
    }

    a:hover {
        color: $footer-link-color-hover !important;
    }

    h2 {
        font-size: 1em;
    }

    p {
        margin-bottom: 0;
    }

    .copyright {
        background-color: $footer-copyright-bg;
    }

    @media (min-width: 1850px) {
        .me-xxxl-0 {
            margin-right: 0 !important;
        }
    }

    #ett-logo {
        transition: color 0.15s ease-in-out;

        .cls-1 {
            fill: $footer-ett;
            transition: fill 0.15s ease-in-out;
        }

        &:hover {
            .cls-1 {
                fill: #0d6efd;
            }

            color: #0d6efd !important;
        }
    }
}

/*-----Back to top-----*/

#back-to-top {
    position: fixed;
    height: 50px;
    width: 50px;
    bottom: -50px;
    /* Default hidden position */
    right: 1rem;
    /* Adjust as needed */
    opacity: 0;
    overflow: hidden;
    z-index: 1000;
    font-size: 21px;
    transition:
        bottom 0.15s ease-out,
        opacity 0.15s ease-out;

    &.visible {
        bottom: 1rem;
        /* Initial visible position */
        opacity: 1;
    }
}

/*-----Border radius card header/footer fix-----*/
.card-header:first-child {
    border-radius: $border-radius $border-radius 0 0;
}

.card-footer:last-child {
    border-radius: 0 0 $border-radius $border-radius;
}

/*-----Contributors cards-----*/

.contributor-cards {
    .card {
        background-color: $contr-card-bg;
        display: flex;
        flex-direction: column;
        
        .card-body {
            flex: 1 1 auto;
            display: flex;
            flex-direction: column;
            justify-content: center;
        }
        
        .card-footer {
            flex-shrink: 0;
        }
    }

    .badge {
        background-color: $primary;
        margin: 10px 10px 0px 0px;
    }

    .card-affiliation {
        color: $primary;
        font-size: 0.8em;
    }
}

/*-----Contributors carousel-----*/

#contributors-carousel .carousel-control-next,
#contributors-carousel .carousel-control-prev {
    width: 3%;
}

@include media-breakpoint-down(md) {
    #contributors-carousel {
        .card-title {
            font-size: 0.5em;
        }

        .card-affiliation,
        .badge {
            font-size: 0.4em;
        }

        .card-body,
        .card-footer {
            padding: 0.5rem 0.25rem;
        }

        .social-icons {
            line-height: 2ex;
            width: 2.2ex;
            height: 2.2ex;

            i {
                font-size: 0.625em;
                line-height: 0.1em;
                vertical-align: 0.225em;
            }
        }
    }
}

/*-----Contributor url image-----*/

.contr-placeholder {
    background-color: rgba($dark, 0.1);
    background-position: center;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/*-----------Social icons----------*/

.social-icons {
    line-height: 4ex;
    width: 4ex;
    height: 4ex;
    text-align: center;
}

/*---- Page metadata ----*/
.page-metadata {
    background-color: $page-metadata-bg;
    .affiliation-link {
        background-color: $page-metadata-link-bg;
    }
    .nav-link {
        border: none;
        display: flex;
        align-items: center;
        border-bottom: 2px solid transparent;
        color: rgba($body-color, 0.75);
        &.active,
        &:hover {
            background: none;
            border-bottom-color: $primary;
            color: $body-color;
        }
        &:not(.active):hover {
            border-bottom-color: $body-color;
        }
    }
}
/* ... */

